refactor(stats): 优化统计服务中的数值处理逻辑
- 使用 Math.clamp 方法替换 Math.min(Math.max()) 组合进行天数范围限制
- 简化阅读趋势数据获取中的天数验证逻辑
- 简化创作趋势数据获取中的天数验证逻辑
- 移除总阅读量计算中的空值检查，直接进行数值转换